--- a/index.html
+++ b/index.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>table</title>
-    <styl>
-        
-    </styl>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
 </head>
 <body>
-    <table border="2px solid black" width="600px">
-<tr>
-    <th colspan="6">Time table</th>
-</tr>
-<tr>
-    <th rowspan="6">Hours</th>
-    <th>Mon</th>
-    <th>Tue</th>
-    <th>Wed</th>
-    <th>Thu</th>
-    <th>Fri</th>
-</tr>
-<tr>
-    <td>scince</td>
-  <td >Maths</td>
-  <td>Science</td>
-  <td>Maths</td>
-  <td>Art</td>
-</tr>
-<tr>
-    <td>scince</td>
-  <td >Maths</td>
-  <td>Science</td>
-  <td>Maths</td>
-  <td>Art</td>
- </tr>
- <tr>
-    <td colspan="5"align=center>LUNCH</td>
- </tr>
- <tr>
-    <td>scince</td>
-    <td >Maths</td>
-    <td>Science</td>
-    <td>Maths</td>
-    <td rowspan="2">PROJECT</td>  
- </tr>
- <TR>
-    <td>scince</td>
-    <td >Maths</td>
-    <td>Science</td>
-    <td>Maths</td>
- </TR>
-    </table>
+    <header>
+        <h1>BIRDWACHING</h1>
+        <nav>
+            <ul>
+                <a href="#">Home</a>
+                <a href="#">Get Started</a>
+                <a href="#">Photos</a>
+                <a href="#">Gear</a>
+                <a href="#">Forum</a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <table>
+            <tr>
+                <td>
+                    <article>
+                        <h2>WELCOME</h2>
+                        <p>Welcome to our fake birdwatching site. ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aut nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.</p>
+                        <br>
+                            <p>so dont wast time!get what you need, the turn off that computer and get out in to the great outdoors!</p>
+                    </article>
+                </td>
+                <td>
+                    <aside>
+                        <h3>FAVORITE PHOTOS</h3>
+                        <img src="image1.jpg" alt="Image 1">
+                        <img src="image2.jpg" alt="Image 2">
+                        <img src="image3.jpg" alt="Image 3">
+                    </aside>
+                </td>
+            </tr>
+        </table>
+    </main>
+    <footer>
+        <p>The fake website example is CCO. Lorem ipsum dolor sit amet consectetur adipisicing elit. At nobis, impedit praesentium consectetur tenetur nihil.</p>
+        <a href="#">Dive Icon</a>
+        bylorc.
+    </footer>
 </body>
 </html>
